# skcms

./: .bazelrc  .gitignore  .gitmodules  BAZEL.md  BUILD.bazel  BUILD.gn  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  afl-fuzz.sh  bench.c  build.ninja  code-owners.config  codereview.settings  commit-queue.cfg  cr-buildbucket.cfg  groups  iccdump.c  main.star  msvs.ninja  project.config  skcms.c  skcms.cc  skcms.gni  skcms.h  skcms_internal.h  skia_bot_test.sh  test_only.c  test_only.h  tests.c
bazel/common_config_settings/: BUILD.bazel
bazel/platform/: BUILD.bazel
bazel/rbe/: README.md  rbe-container-apt-install.lock.json  rbe-container-apt-install.yaml
bazel/rbe/config/: BUILD
bazel/rbe/linux-bazel-4.2.1/config/: BUILD
bazel/rbe/windows-bazel-4.2.1/config/: BUILD
bazel/toolchains/: README.md
bazel/toolchains/linux-bazel-4.2.1/config/: BUILD
ext/: roll_lodepng.sh
fuzz/: BUILD  fuzz.h  fuzz_iccprofile_atf.c  fuzz_iccprofile_info.c  fuzz_iccprofile_transform.c  fuzz_main.c
infra/bots/: Makefile  bazel.py  bot.isolate  bot.py  codereview.settings  gen_tasks.go  infra_tests.py  tasks.json
infra/branch-config/: cq.cfg
infra/project-config/: project.cfg
ninja/: android  android-arm  android-arm.lsan  android-arm.neon-vfpv4  android-arm.neon-vfpv4-O3  android-arm.vfpv2  android.fp16  android.lsan  android.nofp16  clang  clang.avx512  clang.hsw  clang.lsan  clang.m32  clang.m32-O0  clang.native  clang.portable  clang.sse2  clang.sse41  common  emscripten  gcc  gcc.m32  gcc.m32-O0  gcc.native  gcc.portable  ios  msvs  targets
profiles/: a2b.h  sRGB_Facebook.icc.txt
profiles/color.org/: ITU-R_BT2020(beta).icc.txt  Lower_Left.icc.txt  Lower_Right.icc.txt  README  Upper_Left.icc.txt  Upper_Right.icc.txt  sRGB2014.icc.txt  sRGB_ICC_v4_Appearance.icc.txt  sRGB_v4_ICC_preference.icc.txt
profiles/fuzz/: a2b_too_many_input_channels2.icc  b2a_no_clut.icc  b2a_no_clut.icc.txt  b2a_too_few_output_channels.icc  clut_overflow.icc  direct_fit_negative_a.icc  direct_fit_negative_a.icc.txt  direct_fit_not_invertible.icc  direct_fit_not_invertible.icc.txt  fit_pq.icc.txt  inf_a.icc.txt  infinite_roundtrip.icc.txt  inverse_tf_adb_negative.icc.txt  inverse_tf_huge_g.icc.txt  inverse_tf_not_invertible.icc.txt  large_g.icc  large_g.icc.txt  nan_eval_during_invert.icc.txt  nan_s.icc.txt  negative_a_plus_b.icc.txt  negative_a_when_inverted.icc.txt  one_d_clut.icc.txt  oss-fuzz-32837.icc  polytf_big_float_to_int_cast.icc.txt  polytf_nan_after_update.icc.txt  zero_g.icc.txt
profiles/misc/: AdobeColorSpin.icc.txt  AdobeRGB.icc.txt  Apple_Color_LCD.icc.txt  Apple_Wide_Color.icc.txt  BenQ_GL2450.icc.txt  BenQ_RL2455.icc.txt  Calibrated_A2B_XYZ_Mismatch.icc  Calibrated_A2B_XYZ_Mismatch.icc.txt  Coated_FOGRA27_CMYK.icc.txt  Coated_FOGRA39_CMYK.icc.txt  ColorLogic_ISO_Coated_CMYK.icc.txt  Color_Spin_Gamma_18.icc.txt  DisplayCal_ASUS_NonMonotonic.icc.txt  Dot_Gain_20_Grayscale.icc.txt  Generic_RGB_Gamma_18.icc.txt  Gray_Gamma_22.icc.txt  HD_709.icc.txt  ITUR_2100_PQ_FULL.icc.txt  Japan_Color_2001_Coated.icc.txt  Kodak_sRGB.icc.txt  Lexmark_X110.icc.txt  MR2416GSDF.icc.txt  MartiMaria_browsertest_A2B.icc.txt  MartiMaria_browsertest_HARD.icc.txt  P3_PQ_cicp.icc  P3_PQ_cicp.icc.txt  Phase_One_P25.icc.txt  PrintOpen_ISO_Coated_CMYK.icc.txt  Rec2020_HLG_cicp.icc  Rec2020_HLG_cicp.icc.txt  Rec2020_PQ_cicp.icc.txt  SM245B.icc.txt  SWOP_Coated_20_GCR_CMYK.icc.txt  ThinkpadX1YogaV2.icc.txt  US_Web_Coated_SWOP_CMYK.icc.txt  XPS13_9360.icc.txt  XRite_GRACol7_340_CMYK.icc.txt  calibrated_nonzero_black.icc.txt  crbug_1017960_19.icc.txt  crbug_976551.icc.txt  (+10 more)
profiles/mobile/: Display_P3_LUT.icc.txt  Display_P3_parametric.icc.txt  iPhone7p.icc.txt  sRGB_LUT.icc.txt  sRGB_parametric.icc.txt
src/: Curve.c  CurveFit.c  GaussNewton.c  GaussNewton.h  ICCProfile.c  LinearAlgebra.c  LinearAlgebra.h  Macros.h  PolyTF.c  PortableMath.c  PortableMath.h  TF13.c  TF14.c  TF15.c  TF23.c  TestOnly.c  TestOnly.h  TransferFunction.c  TransferFunction.h  Transform.c  Transform.h  Transform_inl.h  skcms_Transform.h  skcms_TransformBaseline.cc  skcms_TransformHsw.cc  skcms_internal.h  skcms_internals.h  skcms_public.h
toolchain/: BUILD.bazel  README.md  aarch64-linux-android-ar.sh  clang.sh  clang_layering_check.bzl  clang_linux_amd64_toolchain_config.bzl  download_android_ndk.bzl  download_clang_linux_amd64.bzl  download_mac_toolchain.bzl  download_ndk_linux_amd64.bzl  download_toolchains.bzl  mac_toolchain_config.bzl  ndk.BUILD  ndk_cc_toolchain_config.bzl  utils.bzl
toolchain/android_trampolines/: aarch64-linux-android-ar.sh  aarch64-linux-android-dwp.sh  aarch64-linux-android-ld.sh  aarch64-linux-android-nm.sh  aarch64-linux-android-objcopy.sh  aarch64-linux-android-objdump.sh  aarch64-linux-android-strip.sh  arm-linux-androideabi-ar.sh  arm-linux-androideabi-dwp.sh  arm-linux-androideabi-ld.sh  arm-linux-androideabi-nm.sh  arm-linux-androideabi-objcopy.sh  arm-linux-androideabi-objdump.sh  arm-linux-androideabi-strip.sh  clang.sh
toolchain/linux_amd64_trampolines/: ar.sh  clang.sh
toolchain/mac_trampolines/: ar_trampoline_mac.sh  clang_trampoline_mac.sh
toolchain/trampolines/: aarch64-linux-android-ar.sh  aarch64-linux-android-cpp.sh  aarch64-linux-android-dwp.sh  aarch64-linux-android-gcov-tool.sh  aarch64-linux-android-gcov.sh  aarch64-linux-android-ld.sh  aarch64-linux-android-llvm-profdata.sh  aarch64-linux-android-nm.sh  aarch64-linux-android-objcopy.sh  aarch64-linux-android-objdump.sh  aarch64-linux-android-strip.sh  arm-linux-androideabi-nm.sh  arm-linux-androideabi-objcopy.sh  arm-linux-androideabi-objdump.sh  clang.sh  gen_trampolines.py
toolchain/trampolines/gen_trampolines/: gen_trampolines.go
toolchains/: README.md
