module(name = "skcms")

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.14")

download_toolchains_for_skcms = use_extension("//toolchain:download_toolchains.bzl", "download_toolchains_for_skcms")

use_repo(
    download_toolchains_for_skcms,
    "clang_linux_amd64",
    "clang_mac",
    "ndk_linux_amd64",
)

local_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:local.bzl", "local_repository")

local_repository(
    name = "rbe_linux_toolchains",
    path = "bazel/rbe/linux-bazel-4.2.1",
)

local_repository(
    name = "rbe_windows_toolchains",
    path = "bazel/rbe/windows-bazel-4.2.1",
)
